[metadata]
name = google_cloud_mlflow
version = 0.0.1
description = MLflow Google Cloud Vertex AI integration package
url = https://github.com/Ark-kun/google_cloud_mlflow
project_urls = 
    Source = https://github.com/Ark-kun/google_cloud_mlflow
    Issues =  https://github.com/Ark-kun/google_cloud_mlflow/issues
author = Alexey Volkov
author_email = alexey.volkov@ark-kun.com
classifiers =
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
license = Apache License 2.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = True
packages = find:
platforms = any
include_package_data = True
install_requires =
    google-cloud-aiplatform~=1.3
    mlflow~=1.19
python_requires = >=3.6

[options.entry_points]
mlflow.deployments =
    google_cloud = google_cloud_mlflow
